# Rift-Browser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  browser explanation.txt  build.bat  build.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
my_browser/: PAINT_RENDERER_README.md  README.md  test_javascript.html  test_javascript_website.html  update_dll_instructions.txt
my_browser/flutter_ui/: pubspec.yaml  test_advanced_rendering.html  test_paint.html
my_browser/flutter_ui/lib/: browser_app.dart  browser_screen.dart  calculate_averages.dart  call_parse_html.dart  content_area.dart  convert_utf8.dart  create_layout_box.dart  create_layout_from_html.dart  dev_console.dart  dom_renderer.dart  engine_bridge.dart  engine_result.dart  (+28 more)
my_browser/rust_engine/: Cargo.toml
my_browser/rust_engine/src/: dom_api.js  javascript.rs  lib.rs
my_browser/rust_engine/src/compositor/: compositor.rs  mod.rs
my_browser/rust_engine/src/dom/: mod.rs  node.rs
my_browser/rust_engine/src/ffi/: dom_api.rs  draw_commands.rs  functions.rs  html_parsing.rs  js_api.rs  layout_api.rs  memory_management.rs  mod.rs
my_browser/rust_engine/src/ffi/functions/: dom_api.rs  draw_commands.rs  html_parsing.rs  js_api.rs  layout_api.rs  memory_management.rs  mod.rs
my_browser/rust_engine/src/layout/: layout.rs  mod.rs
my_browser/rust_engine/src/paint/: display_list.rs  mod.rs  painter.rs
my_browser/rust_engine/src/parser/: css.rs  html.rs  javascript.rs  mod.rs
my_browser/rust_engine/src/style/: mod.rs
(+22 files in other folders)
