[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.7"
num_cpus = "1.15"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
cssparser = "0.29"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
selectors = "0.25"
